[workspace]
members = ["xtask"]
resolver = "2"

[package]
name = "meta-hybrid"
version = "0.2.6"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
extattr = "1"
# Log facade is kept for compatibility with dependencies using log
log = "0.4"
rustix = { version = "0.38", features = ["fs", "mount", "process", "thread", "param"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
chrono = "0.4"
procfs = "0.17"
mimalloc = "0.1"

# Tracing Ecosystem
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2" # Captures logs from 'log' crate macros

# Android specific
[target.aarch64-linux-android.dependencies]
android_logger = "0.13" # Optional: kept if you want logcat support alongside file log

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true